# Crawler_2

./: .gitattribute  .gitignore  Cargo.toml  LICENSE
Download/: naver.com2020-06-08T22:45:02.246257+09:00
src/: lib.rs
src/agent/: agent.rs  mod.rs
src/agent/converting/: link_converter.rs  mod.rs  webpage_converter.rs
src/agent/crawling/: link_extract.rs  mod.rs  replicate_check.rs  web_downloader.rs
src/agent/ranking/: global_rank.rs  local_rank.rs  mod.rs  text_to_binary_converter.rs
src/frontier/: coordinator.rs  dns_cashe.rs  mod.rs
src/frontier/converting/: global_attribute.rs  mod.rs
src/frontier/crawling/: dns_cashe.rs  mod.rs  seed_url_dispenser.rs
src/frontier/ranking/: block_rank.rs  mod.rs
src/tests/: dns_caching_test.rs  get_html_test.rs  mod.rs  url_parse_test.rs
src/tests/agent/: get_html_test.rs  mod.rs  replicate_test.rs
src/tests/front/: dns_caching_test.rs  mod.rs
src/util/: link.rs  mod.rs  urlparser.rs
