[package]
name = "temp"
version = "0.1.0"
authors = ["namsoocho <nscho66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 queues="1.1"
 hyper = "0.13"
 hyper-tls="0.4.1"
 chrono="0.4"
 tokio = { version = "0.2", features = ["full"] }